tests/baselines/reference/annotationDeclarationError5.errors.txt
tests/cases/conformance/annotations/annotationDeclarationError5.ets(2,5): error TS28024: Annotation must be defined at top-level only.


==== tests/cases/conformance/annotations/annotationDeclarationError5.ets (1 errors) ====
    module M {
        @interface Anno {
        ~~~~~~~~~~~~~~~~~
            a: number
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS28024: Annotation must be defined at top-level only.
    }